--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/localgit .txt
+        pip install -r requirements/local.txt
     - name: Run Tests
       run: |
         pytest
