--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -52,5 +52,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements/local.txt
 
-      - name: Code coverage
+      - name: Run code coverage
         run:  coverage run -m pytest
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
