--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,6 @@ jobs:
     env:
       # postgres://user:password@host:port/database
       DATABASE_URL: "postgres://postgres:postgres@localhost:5432/postgres"
-      CODECOV_TOKEN: "7c6ebf2c-48e5-4449-85fb-e3fb2ce9563d"
 
     steps:
 
@@ -79,3 +78,5 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
+        with:
+          token: "7c6ebf2c-48e5-4449-85fb-e3fb2ce9563d"
