--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 addopts = --ds=config.settings.test --reuse-db
-python_files = tests.py test_*.py
+python_files = anvil_project_manager/tests/test*.py
