--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.9"
-          cache: pip
+          cache: pip-v2
           cache-dependency-path: |
             requirements/base.txt
             requirements/local.txt
