Try specifying the API service account file in CI
Not sure why this is needed - the other CI file doesn't ask for it.

--- a/.github/workflows/ci-mariadb.yml
+++ b/.github/workflows/ci-mariadb.yml
@@ -71,4 +71,6 @@ jobs:
           pip install -r requirements/local.txt
 
       - name: Test with pytest
+        env:
+            ANVIL_API_SERVICE_ACCOUNT_FILE: foo
         run:  pytest --ds=config.settings.local_mariadb
