Specify host as localhost locally and 127.0.0.1 on github

--- a/.github/workflows/ci-mariadb.yml
+++ b/.github/workflows/ci-mariadb.yml
@@ -81,4 +81,5 @@ jobs:
       - name: Test with pytest
         env:
             ANVIL_API_SERVICE_ACCOUNT_FILE: foo
+            DJANGO_DB_HOST: 127.0.0.1
         run:  pytest --ds=config.settings.local_mariadb -k 'BillingProjectTest and test_model_saving'
