--- a/.github/workflows/ci-mariadb.yml
+++ b/.github/workflows/ci-mariadb.yml
@@ -49,6 +49,7 @@ jobs:
           MARIADB_PASSWORD: ${{ secrets.DJANGO_DB_PASSWORD }}
           MARIADB_DATABASE: ${{ secrets.DJANGO_DB_NAME }}
           MARIADB_ROOT_PASSWORD: password
+          MARIADB_HOST: 127.0.0.1
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
