--- a/.github/workflows/ci-mariadb.yml
+++ b/.github/workflows/ci-mariadb.yml
@@ -11,7 +11,7 @@ on:
     paths-ignore: [ "docs/**" ]
 
   push:
-    branches: [ "master", "main", "mariadb-ci" ]
+    branches: [ "master", "main" ]
     paths-ignore: [ "docs/**" ]
 
 
