--- a/.github/workflows/ci-mariadb.yml
+++ b/.github/workflows/ci-mariadb.yml
@@ -23,11 +23,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version:
-        - 3.7
-        - 3.8
-        - 3.9
-        - '3.10'
         database:
         - mariadb:10.3
         - mariadb:10.5
@@ -57,7 +52,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-vesrion }}
+          python-version: 3.9
           cache: pip
           cache-dependency-path: |
             requirements/base.txt
