Add MariaDB 10.4 to CI

--- a/.github/workflows/ci-mariadb.yml
+++ b/.github/workflows/ci-mariadb.yml
@@ -25,6 +25,7 @@ jobs:
       matrix:
         database:
         - mariadb:10.3
+        - mariadb:10.4
         - mariadb:10.5
         - mariadb:latest
 
