--- a/.github/workflows/ci-mariadb.yml
+++ b/.github/workflows/ci-mariadb.yml
@@ -23,6 +23,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        python-version:
+        - 3.8
+        - 3.9
         database:
         - mariadb:10.3
         - mariadb:10.4
@@ -53,7 +56,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python-version }}
           cache: pip
           cache-dependency-path: |
             requirements/base.txt
