--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -82,9 +82,22 @@ jobs:
       DJANGO_SETTINGS_MODULE: anvil_consortium_manager.tests.settings.test_mariadb
       ANVIL_API_SERVICE_ACCOUNT_FILE: foo
 
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version:
+        - 3.8
+        - 3.9
+        - 3.10
+        database:
+        - mariadb:10.3
+        - mariadb:10.4
+        - mariadb:10.5
+        - mariadb:latest
+
     services:
       database:
-        image: mariadb:10.5
+        image: ${{ matrix.database }}
         env:
           MYSQL_ROOT_PASSWORD: rootpw
         ports:
@@ -99,7 +112,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.9"
+          python-version: ${{ matrix.python-version }}
           cache: pip
           cache-dependency-path: |
             requirements/base.txt
