--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ warn_unused_configs = True
 plugins = mypy_django_plugin.main
 
 [mypy.plugins.django-stubs]
-django_settings_module = config.settings.test
+django_settings_module = anvil_consortium_manager.tests.settings.test
 
 [mypy-*.migrations.*]
 # Django migrations should not produce any errors:
