--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,36 @@
+[metadata]
+name = django-anvil-consortium-manager
+version = 0.1
+description = A Django app to manage Consortium AnVIL groups, workspaces, and access.
+long_description = file: README.md
+url = https://github.com/UW-GAC/django-anvil-consortium-manager
+author = Adrienne Stilp
+author_email = amstilp@uw.edu
+license = BSD-3-Clause  # Example license
+classifiers =
+    Environment :: Web Environment
+    Framework :: Django
+    Framework :: Django :: 3.2
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Topic :: Internet :: WWW/HTTP
+    Topic :: Internet :: WWW/HTTP :: Dynamic Content
+
+[options]
+include_package_data = true
+packages = find:
+python_requires = >=3.8
+install_requires =
+    Django >= 3.2
+
+
 [flake8]
 max-line-length = 120
 exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
