Add dependencies to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-anvil-consortium-manager
-version = 0.1
+version = 0.0.999
 description = A Django app to manage Consortium AnVIL groups, workspaces, and access.
 long_description = file: README.md
 url = https://github.com/UW-GAC/django-anvil-consortium-manager
@@ -29,6 +29,12 @@ packages = find:
 python_requires = >=3.8
 install_requires =
     Django >= 3.2
+    pytz >= 0
+    crispy-bootstrap5 >= 0.6
+    django-crispy-forms >= 1.14
+    google-auth >= 2.6
+    fontawesomefree >= 6.1
+    django-tables2 >= 2.4
 
 
 [flake8]
