--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long_description = file: README.md
 url = https://github.com/UW-GAC/django-anvil-consortium-manager
 author = Adrienne Stilp
 author_email = amstilp@uw.edu
-license = BSD-3-Clause  # Example license
+license = MIT
 classifiers =
     Environment :: Web Environment
     Framework :: Django
