Add app directory to isort known_first_party

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
 
 [isort]
 line_length = 88
-known_first_party = example_site,config
+known_first_party = anvil_consortium_manager,example_site
 multi_line_output = 3
 default_section = THIRDPARTY
 skip = venv/
