--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
           cache: pip
           cache-dependency-path: |
             requirements/base.txt
+            requirements/test.txt
 
       - name: Run pre-commit
         uses: pre-commit/action@v2.0.3
@@ -53,11 +54,12 @@ jobs:
           cache: pip
           cache-dependency-path: |
             requirements/base.txt
+            requirements/test.txt
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements/base.txt
+          pip install -r requirements/test.txt
 
       - name: Test with SQLite backend
         run:  python ./runtests.py
@@ -114,11 +116,12 @@ jobs:
           cache: pip
           cache-dependency-path: |
             requirements/base.txt
+            requirements/test.txt
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements/base.txt
+          pip install -r requirements/test.txt
 
       - name: Test with MariaDB backend
         run:  python ./runtests.py
