--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
     paths-ignore: [ "docs/**" ]
 
   push:
-    branches: [ "master", "main", "misc-app-updates" ]
+    branches: [ "master", "main", "reusable-app" ]
     paths-ignore: [ "docs/**" ]
 
 
@@ -30,7 +30,7 @@ jobs:
           cache: pip
           cache-dependency-path: |
             requirements/base.txt
-            requirements/test.txt
+            requirements/dev.txt
 
       - name: Run pre-commit
         uses: pre-commit/action@v2.0.3
@@ -54,12 +54,12 @@ jobs:
           cache: pip
           cache-dependency-path: |
             requirements/base.txt
-            requirements/test.txt
+            requirements/dev.txt
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements/test.txt
+          pip install -r requirements/dev.txt
 
       - name: Test with SQLite backend
         run:  python ./runtests.py
@@ -116,12 +116,12 @@ jobs:
           cache: pip
           cache-dependency-path: |
             requirements/base.txt
-            requirements/test.txt
+            requirements/dev.txt
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements/test.txt
+          pip install -r requirements/dev.txt
 
       - name: Test with MariaDB backend
         run:  python ./runtests.py
