Add this branch to the CI for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
     paths-ignore: [ "docs/**" ]
 
   push:
-    branches: [ "master", "main", "reusable-app" ]
+    branches: [ "master", "main", "misc-app-updates" ]
     paths-ignore: [ "docs/**" ]
 
 
