--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py38
+envlist = py38,py39,py310
 isolated_build = True
 
 [testenv]
