--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     fontawesomefree >= 6.1
     django-tables2 >= 2.4
     django-simple-history >= 3.1.1
+    django-extensions >= 3.1.5
 
 
 [flake8]
