Test package using only specified dependencies
Also include the packages required for testing. This helps ensure
that the package dependencies are properly specified.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@ isolated_build = True
 
 [testenv]
 deps =
-    -r{toxinidir}/requirements/dev.txt
+    Django==3.2.*
+    responses
+    factory-boy
 commands =
     ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
