Modify how different python versions are specified

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py38,py39,py310
-isolated_build = True
+envlist = py{38,39,310}
+isolated_build = true
 
 [testenv]
 deps =
