Run both sqlite and mysql tests with tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py{38,39,310}
+envlist = py{38,39,310}-{sqlite,mysql}
 isolated_build = true
 
 [testenv]
@@ -8,5 +8,7 @@ deps =
     Django==3.2.*
     responses
     factory-boy
+    mysql: mysqlclient
 commands =
-    ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
+    sqlite: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
+    mysql: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.local_mariadb
