--- a/tox.ini
+++ b/tox.ini
@@ -12,3 +12,9 @@ deps =
 commands =
     sqlite: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
     mysql: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.local_mariadb
+
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39
+    3.10: py310
