--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py{38,39,310}-{sqlite,mysql}
+envlist = py{38,39,310}-{sqlite}
 isolated_build = true
 
 [testenv]
