--- a/.github/workflows/ci-tox.yml
+++ b/.github/workflows/ci-tox.yml
@@ -23,6 +23,20 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
+      database:
+        - mariadb:10.3
+        - mariadb:10.4
+        - mariadb:10.5
+        - mariadb:latest
+
+    services:
+      database:
+        image: ${{ matrix.database }}
+        env:
+          MYSQL_ROOT_PASSWORD: rootpw
+        ports:
+          - 3306:3306
+        options: --tmpfs /var/lib/mysql
 
     steps:
       - uses: "actions/checkout@v2"
