--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py{38,39,310}-{sqlite}
+envlist = py{38,39,310}-{sqlite,mariadb}
 isolated_build = true
 
 [testenv]
@@ -11,7 +11,7 @@ deps =
     mysql: mysqlclient
 commands =
     sqlite: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
-    mysql: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.local_mariadb
+    mariadb: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test_mariadb
 
 [gh-actions]
 python =
