Fix mysql -> mariadb typo in tox dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     Django==3.2.*
     responses
     factory-boy
-    mysql: mysqlclient
+    mariadb: mysqlclient
 commands =
     sqlite: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
     mariadb: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test_mariadb
