--- a/.github/workflows/ci-tox.yml
+++ b/.github/workflows/ci-tox.yml
@@ -48,7 +48,7 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
 
-      - name: "Run tox targets for ${{ matrix.python-version }}"
+      - name: "Run tox targets for ${{ matrix.python-version }} and ${{ matrix.backend }}"
         run: "python -m tox"
         env:
             BACKEND: ${{ matrix.backend }}
