--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
     mariadb: mysqlclient
 commands =
     sqlite: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
-    mariadb: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test_mariadb
+    mariadb: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.local_mariadb
 
 [gh-actions]
 python =
