Give test user all permissions to test database in CI

--- a/.github/workflows/ci-tox.yml
+++ b/.github/workflows/ci-tox.yml
@@ -54,6 +54,10 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
 
+      - name: setup mariadb user
+        script:
+          echo "GRANT ALL PRIVILEGES ON test_anvil_consortium_manager.* TO django@127.0.0.1;" | mysql -u root -p rootpw -h "${MYSQL_HOST}"
+
       - name: "Run tox targets for ${{ matrix.python-version }} and ${{ matrix.backend }}-${{ matrix.mariadb-version }}"
 
         run: "python -m tox"
