--- a/.github/workflows/ci-tox.yml
+++ b/.github/workflows/ci-tox.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: setup mariadb user
         run:
-          echo "GRANT ALL PRIVILEGES ON test_anvil_consortium_manager.* TO django@127.0.0.1;" | mysql -u root -p rootpw -h "${MYSQL_HOST}"
+          echo "GRANT ALL PRIVILEGES ON test_anvil_consortium_manager.* TO django@127.0.0.1;" | mysql -u root -p rootpw -h"127.0.0.01"
 
       - name: "Run tox targets for ${{ matrix.python-version }} and ${{ matrix.backend }}-${{ matrix.mariadb-version }}"
 
