--- a/.github/workflows/ci-tox.yml
+++ b/.github/workflows/ci-tox.yml
@@ -39,7 +39,7 @@ jobs:
           MYSQL_USER: django
           MYSQL_PASSWORD: password
         ports:
-          - 3306:3306
+          - 3306
         options: --tmpfs /var/lib/mysql
 
     steps:
@@ -56,7 +56,7 @@ jobs:
 
       - name: setup mariadb user
         run:
-          echo "GRANT ALL PRIVILEGES ON test_anvil_consortium_manager.* TO django@127.0.0.1;" | mysql -u root -p rootpw -h"127.0.0.01"
+          echo "GRANT ALL PRIVILEGES ON test_anvil_consortium_manager.* TO django@127.0.0.1;" | mysql -u root -p rootpw
 
       - name: "Run tox targets for ${{ matrix.python-version }} and ${{ matrix.backend }}-${{ matrix.mariadb-version }}"
 
