--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     responses
     factory-boy
     mariadb: mysqlclient
+passenv = *
 commands =
     sqlite: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
     mariadb: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.local_mariadb
