--- a/.github/workflows/ci-tox.yml
+++ b/.github/workflows/ci-tox.yml
@@ -24,7 +24,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.8"]
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
       - uses: "actions/checkout@v2"
@@ -54,8 +54,8 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.8"]
-        mariadb-version: ["10.5"]
+        python-version: ["3.8", "3.9", "3.10"]
+        mariadb-version: ["10.3", "10.5"]
 
     services:
       database:
