Run tox tests using coverage

--- a/tox.ini
+++ b/tox.ini
@@ -8,11 +8,13 @@ deps =
     Django==3.2.*
     responses
     factory-boy
+    coverage
+    django-coverage-plugin
     mariadb: mysqlclient
 passenv = *
 commands =
-    sqlite: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
-    mariadb: ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.local_mariadb
+    sqlite: coverage run ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
+    mariadb: coverage run ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.local_mariadb
 
 [gh-actions]
 python =
