Run coverage and upload to codecov

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ passenv = *
 commands =
     sqlite: coverage run ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
     mariadb: coverage run ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.local_mariadb
+    coverage xml
 
 [gh-actions]
 python =
