--- a/.github/workflows/ci-tox.yml
+++ b/.github/workflows/ci-tox.yml
@@ -39,8 +39,13 @@ jobs:
           python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
 
       - name: "Run tox targets for ${{ matrix.python-version }}"
-
         run: "python -m tox"
+
+      - if: ${{ matrix.python-version == "3.9" }}
+        name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   test-mariadb:
     name: "Python ${{ matrix.python-version }} - mariadb - ${{ matrix.mariadb-version }}"
