--- a/.github/workflows/ci-tox.yml
+++ b/.github/workflows/ci-tox.yml
@@ -41,7 +41,7 @@ jobs:
       - name: "Run tox targets for ${{ matrix.python-version }}"
         run: "python -m tox"
 
-      - if: ${{ matrix.python-version == "3.9" }}
+      - if: ${{ matrix.python-version == '3.9' }}
         name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
