--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci-tests
+name: ci-tox
 
 # Enable Buildkit and let compose use it to speed up image building
 env:
@@ -11,7 +11,7 @@ on:
     paths-ignore: [ "docs/**" ]
 
   push:
-    branches: [ "master", "main" ]
+    branches: [ "master", "main", "tox" ]
     paths-ignore: [ "docs/**" ]
 
 
@@ -35,93 +35,73 @@ jobs:
       - name: Run pre-commit
         uses: pre-commit/action@v2.0.3
 
-  # With no caching at all the entire ci process takes 4m 30s to complete!
   test-sqlite:
-    runs-on: ubuntu-latest
-
+    name: "Python ${{ matrix.python-version }} - sqlite"
+    runs-on: "ubuntu-latest"
     env:
-      DJANGO_SETTINGS_MODULE: anvil_consortium_manager.tests.settings.test
+        BACKEND: sqlite
+
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
-
-      - name: Checkout Code Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - uses: "actions/checkout@v2"
+      - uses: "actions/setup-python@v2"
         with:
-          python-version: "3.9"
-          cache: pip
-          cache-dependency-path: |
-            requirements/base.txt
-            requirements/dev.txt
-
-      - name: Install Dependencies
+          python-version: "${{ matrix.python-version }}"
+      - name: "Install dependencies"
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements/dev.txt
+          python -VV
+          python -m site
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
 
-      - name: Test with SQLite backend
-        run:  python ./runtests.py
+      - name: "Run tox targets for ${{ matrix.python-version }}"
+        run: "python -m tox"
 
-      - name: Run code coverage
-        run:  |
-          coverage run runtests.py
-          coverage xml
-
-      - name: Upload coverage to Codecov
+      - if: ${{ matrix.python-version == '3.9' }}
+        name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-  # With no caching at all the entire ci process takes 4m 30s to complete!
   test-mariadb:
-    runs-on: ubuntu-latest
-
+    name: "Python ${{ matrix.python-version }} - mariadb - ${{ matrix.mariadb-version }}"
+    runs-on: "ubuntu-latest"
     env:
-      DJANGO_SETTINGS_MODULE: anvil_consortium_manager.tests.settings.test_mariadb
-      ANVIL_API_SERVICE_ACCOUNT_FILE: foo
+      DBNAME: test
+      DBUSER: root
+      DBPASSWORD: rootpw
+      DBHOST: 127.0.0.1
+      BACKEND: mariadb
 
     strategy:
-      fail-fast: false
       matrix:
-        python-version:
-        - 3.8
-        - 3.9
-        - '3.10'
-        database:
-        - mariadb:10.3
-        - mariadb:10.4
-        - mariadb:10.5
-        - mariadb:latest
+        python-version: ["3.8", "3.9", "3.10"]
+        mariadb-version: ["10.3", "10.5"]
 
     services:
       database:
-        image: ${{ matrix.database }}
+        image: mariadb:${{ matrix.mariadb-version }}
         env:
           MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: test
         ports:
           - 3306:3306
         options: --tmpfs /var/lib/mysql
 
     steps:
-
-      - name: Checkout Code Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - uses: "actions/checkout@v2"
+      - uses: "actions/setup-python@v2"
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: pip
-          cache-dependency-path: |
-            requirements/base.txt
-            requirements/dev.txt
-
-      - name: Install Dependencies
+          python-version: "${{ matrix.python-version }}"
+      - name: "Install dependencies"
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements/dev.txt
+          python -VV
+          python -m site
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
 
-      - name: Test with MariaDB backend
-        run:  python ./runtests.py
+      - name: "Run tox targets for ${{ matrix.python-version }} and mariadb-${{ matrix.mariadb-version }}"
+        run: "python -m tox"
