--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
 passenv = *
 commands =
     sqlite: coverage run ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
-    mariadb: coverage run ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.local_mariadb
+    mariadb: coverage run ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test_mariadb
     coverage xml
 
 [gh-actions]
