--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     django-crispy-forms >= 1.12
     google-auth >= 2.6
     fontawesomefree >= 6.1
+    django-autocomplete-light >= 3.9
     django-tables2 >= 2.4
     django-simple-history >= 3.1.1
     django-extensions >= 3.1.5
