--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
     django-tables2 >= 2.4
     django-simple-history >= 3.1.1
     django-extensions >= 3.1.5
+    django-extra-views >= 0.14.0
 
 
 [flake8]
