--- a/.coveragerc
+++ b/.coveragerc
@@ -2,3 +2,7 @@
 plugins=django_coverage_plugin
 source=anvil_consortium_manager
 omit=anvil_consortium_manager/tests/integration/integration_tests_anvil_api.py
+
+[report]
+exclude_lines =
+  @abstractproperty
