--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-anvil-consortium-manager
-version = 0.1.dev6
+version = attr: anvil_consortium_manager.__version__
 description = A Django app to manage Consortium AnVIL groups, workspaces, and access.
 long_description = file: README.md
 url = https://github.com/UW-GAC/django-anvil-consortium-manager
