Add freezegun to tox dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ deps =
     factory-boy
     coverage
     django-coverage-plugin
+    freezegun
     mariadb: mysqlclient
 passenv = *
 commands =
