--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --ds=anvil_consortium_manager.tests.settings.test --reuse-db
+addopts = --ds=anvil_consortium_manager.tests.settings.test --reuse-db --ignore=anvil_consortium_manager/tests/test_app/
 python_files = anvil_consortium_manager/tests/test*.py
