Add django 4.0 to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py{38,39,310}-{sqlite,mariadb}
+envlist = py{38,39,310}-django{32,40}-{sqlite,mariadb}
 isolated_build = true
 
 [testenv]
 deps =
-    Django==3.2.*
+    django32: Django==3.2.*
+    django40: Django==4.0.*
     responses
     factory-boy
     coverage
