Run Django 4.1 instead of 4.0 in tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,13 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py{38,39,310}-django{32,40}-{sqlite,mariadb}
+envlist = py{38,39,310}-django{32,41}-{sqlite,mariadb}
 isolated_build = true
 
 [testenv]
 deps =
     django32: Django==3.2.*
     django40: Django==4.0.*
+    django41: Django==4.1.*
     responses
     factory-boy
     coverage
