Update tox to run coverage for all test environments

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py{38,39,310}-django{32,41}-{sqlite,mariadb}
+envlist = py{38,39,310}-django{32,41}-{sqlite,mariadb},cov
 isolated_build = true
 
 [testenv]
@@ -16,9 +16,10 @@ deps =
     mariadb: mysqlclient
 passenv = *
 commands =
-    sqlite: coverage run ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
-    mariadb: coverage run ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test_mariadb
-    coverage xml
+    sqlite: coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
+    mariadb: coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test_mariadb
+    cov: coverage combine
+    cov: coverage xml
 
 [gh-actions]
 python =
