Run tox in the same testenv instead of split by mariadb/mysql

--- a/tox.ini
+++ b/tox.ini
@@ -14,12 +14,21 @@ deps =
     django-coverage-plugin
     freezegun
     mariadb: mysqlclient
-passenv = *
+passenv =
+    DBNAME
+    DBUSER
+    DBPASSWORD
+    DBHOST
+    DBBACKEND
+    DBPORT
 commands =
-    sqlite: coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
-    mariadb: coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test_mariadb
+    coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
     cov: coverage combine
     cov: coverage xml
+
+[testenv:py{38,39,310}-django{32,41}-mariadb]
+setenv =
+    DBBACKEND = mysql
 
 [gh-actions]
 python =
@@ -28,6 +37,6 @@ python =
     3.10: py310
 
 [gh-actions:env]
-BACKEND =
-    sqlite: sqlite
+DBBACKEND =
+    sqlite3: sqlite
     mariadb: mariadb
