Remove cov job from tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py{38,39,310}-django{32,41}-{sqlite,mariadb},cov
+envlist = py{38,39,310}-django{32,41}-{sqlite,mariadb}
 isolated_build = true
 
 [testenv]
@@ -23,8 +23,6 @@ passenv =
     DBPORT
 commands =
     coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
-    cov: coverage combine
-    cov: coverage xml
 
 [testenv:py{38,39,310}-django{32,41}-mariadb]
 setenv =
