--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,3 +81,34 @@ jobs:
     #       DBPASSWORD: rootpw
     #       DBHOST: 127.0.0.1
     #       DBBACKEND: mysql
+
+
+
+  coverage:
+    name: Check coverage.
+    runs-on: "ubuntu-latest"
+    needs: [sqlite]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          # Use latest, so it understands all syntax.
+          python-version: "3.10"
+
+      - run: python -m pip install --upgrade coverage[toml]
+
+      - name: Download coverage data.
+        uses: actions/download-artifact@v3
+        with:
+          name: coverage-data
+
+      - name: Combine coverage & check percentage
+        run: |
+          python -m coverage combine
+          python -m coverage xml
+          python -m coverage report
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
