--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,8 @@ jobs:
           # Use latest, so it understands all syntax.
           python-version: "3.10"
 
-      - run: python -m pip install --upgrade coverage[toml]
+      - run: python -m pip install --upgrade coverage[toml] django-coverage-plugin
+
 
       - name: Download coverage data.
         uses: actions/download-artifact@v3
