--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,7 @@ jobs:
           # Use latest, so it understands all syntax.
           python-version: "3.10"
 
-      - run: python -m pip install --upgrade coverage[toml] django-coverage-plugin
+      - run: python -m pip install --upgrade coverage[toml] django==3.2.16 django-coverage-plugin
 
 
       - name: Download coverage data.
