--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
   coverage:
     name: Check coverage.
     runs-on: "ubuntu-latest"
-    needs: [sqlite, mariadb]
+    needs: [sqlite, mysql]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
