--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       max-parallel: 5
       matrix:
-        python-version: ['3.8']
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -57,8 +57,8 @@ jobs:
       fail-fast: false
       max-parallel: 5
       matrix:
-        python-version: ['3.8']
-        mariadb-version: ["10.3"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        mariadb-version: ["10.3", "10.5"]
 
     services:
       database:
