Add django-test-migrations to tox dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps =
     coverage
     django-coverage-plugin
     freezegun
+    django-test-migrations
     mysql: mysqlclient
 passenv =
     DBNAME
