Fix coverage options in setup.cfg
For some reason, the include value was set to example_site/*. This
meant that coverage didn't record any of the actual AC package test
coverage.

--- a/setup.cfg
+++ b/setup.cfg
@@ -79,7 +79,7 @@ django_settings_module = anvil_consortium_manager.tests.settings.test
 ignore_errors = True
 
 [coverage:run]
-include = example_site/*
+include = anvil_consortium_manager/*
 omit = *migrations*, *tests*
 plugins =
     django_coverage_plugin
