Add Django 4.2 to tox testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py{38,39,310}-django{32,41}-{sqlite,mysql}
+envlist = py{38,39,310}-django{32,41,42}-{sqlite,mysql}
 isolated_build = true
 
 [testenv]
@@ -8,6 +8,7 @@ deps =
     django32: Django==3.2.*
     django40: Django==4.0.*
     django41: Django==4.1.*
+    django42: Django==4.2.*
     responses
     factory-boy
     coverage
@@ -25,11 +26,11 @@ passenv =
 commands =
     coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
 
-[testenv:py{38,39,310}-django{32,41}-mysql]
+[testenv:py{38,39,310}-django{32,41,42}-mysql]
 setenv =
     DBBACKEND = mysql
 
-[testenv:py{38,39,310}-dj{32,41}-sqlite]
+[testenv:py{38,39,310}-dj{32,41,42}-sqlite]
 setenv =
     {[testenv]setenv}
     DBBACKEND = sqlite3
