Fix sqlite testenv name
The name included dj{...} instead of django{...}

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
 setenv =
     DBBACKEND = mysql
 
-[testenv:py{38,39,310}-dj{32,41}-sqlite]
+[testenv:py{38,39,310}-django{32,41}-sqlite]
 setenv =
     {[testenv]setenv}
     DBBACKEND = sqlite3
