Clean up pytest warnings about TestWorkspaceDataFactory class
This class is a factory to create a TestWorkspaceData, but the
pytest runner is finidng it. Modify the pytest.ini file to tell
it to ignore this class.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 addopts = --ds=anvil_consortium_manager.tests.settings.test --reuse-db --ignore=anvil_consortium_manager/tests/test_app/
 python_files = anvil_consortium_manager/tests/test*.py
+python_classes = !TestWorkspaceDataFactory
