Print out the pip cache

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ passenv =
     DBBACKEND
     DBPORT
 commands =
-    pip freeze
+    python -m pip cache list
     coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
 
 [testenv:py{38,39,310}-django{32,41,42}-mysql]
