Pass the PIP_VERBOSE environment variable in tox
This is step one of getting tox to run pip in verbose mode

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ envlist = py{38,39,310}-django{32,41,42}-{sqlite,mysql}
 isolated_build = true
 # We need 4.4.0 for constrain_package_deps.
 min_version = 4.4.0
+passenv =
+    PIP_VERBOSE
 
 [testenv]
 deps =
@@ -27,6 +29,7 @@ passenv =
     DBBACKEND
     DBPORT
 commands =
+    python -c "import os; print(os.environ.get('PIP_VERBOSE'))"
     python -m coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
 
 [testenv:py{38,39,310}-django{32,41,42}-mysql]
