Try passing NO_CACHE_DIR env variable to pip

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ isolated_build = true
 min_version = 4.4.0
 passenv =
     PIP_VERBOSE
+    PIP_NO_CACHE_DIR
 
 [testenv]
 deps =
@@ -30,6 +31,7 @@ passenv =
     DBPORT
 commands =
     python -c "import os; print(os.environ.get('PIP_VERBOSE'))"
+    python -c "import os; print(os.environ.get('PIP_NO_CACHE_DIR'))"
     python -m coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
 
 [testenv:py{38,39,310}-django{32,41,42}-mysql]
