Clean up debugging in tox and CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ name: ci-tox
 env:
   DOCKER_BUILDKIT: 1
   COMPOSE_DOCKER_CLI_BUILD: 1
-  PIP_VERBOSE: 3
 
 on:
   pull_request:
@@ -62,10 +61,7 @@ jobs:
         python -m pip install --upgrade tox tox-gh-actions
 
     - name: Test with tox
-      run: |
-        df
-        tox -vvvv
-        df
+      run: tox
       env:
         DBBACKEND: sqlite3
         DBNAME: ":memory:"
@@ -112,10 +108,7 @@ jobs:
 
     - name: Test with tox - 10.3
       if: ${{ matrix.mariadb-version == '10.3' }}
-      run: |
-        df
-        tox -vvvv --skip-env ".+?-django42-mysql"
-        df
+      run: tox --skip-env ".+?-django42-mysql"
       env:
         DBBACKEND: mysql
         DBNAME: test
@@ -126,10 +119,7 @@ jobs:
 
     - name: Test with tox - not 10.3
       if: ${{ matrix.mariadb-version != '10.3' }}
-      run: |
-        df
-        tox -vvvv
-        df
+      run: tox
       env:
         DBBACKEND: mysql
         DBNAME: test
