Try buildling a wheel

--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,7 @@ commands =
 [testenv:py{38,39,310}-django{32,41,42}-mysql]
 setenv =
     DBBACKEND = mysql
+package = wheel
 
 
 [testenv:py{38,39,310}-django{32,41,42}-sqlite]
