Run tox in verbose mode

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
         python -m pip install --upgrade tox tox-gh-actions
 
     - name: Test with tox
-      run: tox
+      run: tox -vvv
       env:
         DBBACKEND: sqlite3
         DBNAME: ":memory:"
@@ -108,7 +108,7 @@ jobs:
 
     - name: Test with tox - 10.3
       if: ${{ matrix.mariadb-version == '10.3' }}
-      run: tox --skip-env ".+?-django42-mysql"
+      run: tox -vvv --skip-env ".+?-django42-mysql"
       env:
         DBBACKEND: mysql
         DBNAME: test
@@ -119,7 +119,7 @@ jobs:
 
     - name: Test with tox - not 10.3
       if: ${{ matrix.mariadb-version != '10.3' }}
-      run: tox
+      run: tox -vvv
       env:
         DBBACKEND: mysql
         DBNAME: test
